# cpp-config-parser

./: CMakeLists.txt  LICENSE  README.md
data/: test_config.json
include/config/: ConfigNode.hpp  ConfigValue.hpp  JsonParser.hpp
src/: ConfigNode.cpp  ConfigValue.cpp  JsonParser.cpp  main.cpp
